--- a/email.html
+++ b/email.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Email</title>
+    <title>Cyber | Jak na phishingové e-maily</title>
     <link rel="stylesheet" href="email.css" />
+    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +16,202 @@
   </head>
   <body>
     <!-- !Statistic window -->
-    <div id="StatisticWindow">End</div>
+    <div id="StatisticWindow">
+      <div id="top">
+        <div class="navItem" id="navItemOne">
+          <span>E-mail 1</span>
+        </div>
+        <div class="navItem" id="navItemTwo">
+          <span>E-mail 2</span>
+        </div>
+        <div class="navItem" id="navItemThree">
+          <span>E-mail 3</span>
+        </div>
+      </div>
+      <div id="levelStatusStytisic">
+        <span id="levelStatusStytisicText">E-mail 1 byl falešný!</span>
+      </div>
+      <div id="reviewsOfLevels">
+        <div>
+          <span class="levelTitle">E-mail 1</span>
+          <span class="statisicUserManagment" id="textPoleOne"></span>
+        </div>
+        <div
+          style="
+            border-top: 1px solid #2b2b2b;
+            border-bottom: 1px solid #2b2b2b;
+          "
+        >
+          <span class="levelTitle">E-mail 2</span>
+          <span class="statisicUserManagment" id="textPoleTwo"></span>
+        </div>
+        <div>
+          <span class="levelTitle">E-mail 3 </span>
+          <span class="statisicUserManagment" id="textPoleThree"></span>
+        </div>
+      </div>
+      <div id="selfEffort">
+        <span>
+          Vytvořil
+          <a target="_blank" href="https://www.maxjanda.cz">Maxmilián Janda</a>
+        </span>
+      </div>
+      <div id="contenOne" class="content">
+        <div id="img">
+          <img src="/assets/level1.png" alt="" />
+        </div>
+        <div id="infoLevel">
+          <div id="infoLevelOne">
+            <h1>1. Nesprávné číslo zásilky</h1>
+            <ul>
+              <li>
+                Číslo balíčku uvedené v e-mailu (#CZ747253) neodpovídá číslu,
+                které jsi skutečně objednal (#CZ847263). To je jasný znak
+                podvodu – kdyby byl e-mail skutečný, číslo by sedělo.
+              </li>
+            </ul>
+            <h1>2. Podezřelý odesílatel</h1>
+            <ul>
+              <li>
+                Adresa „info@zasilkovna-support.com“ nevypadá jako oficiální
+                e-mail Zásilkovny. Podvodníci často používají podobné, ale
+                falešné domény, aby oklamali oběti.
+              </li>
+            </ul>
+            <h1>3. Tlak na rychlou reakci</h1>
+            <ul>
+              <li>
+                Výzva k akci „potvrďte údaje do 48 hodin“ je klasický trik
+                hackerů, aby lidé jednali impulzivně a bez ověření.
+              </li>
+            </ul>
+            <h1>4. Podezřelý odkaz</h1>
+            <ul>
+              <li>
+                Kliknutí na „Ověřit doručovací údaje“ může vést na falešnou
+                stránku, kde se útočníci pokusí získat přihlašovací údaje nebo
+                jiné citlivé informace.
+              </li>
+            </ul>
+            <h1>5. Nejasná formulace</h1>
+            <ul>
+              <li>
+                Legitimní e-maily od přepravních společností bývají konkrétní a
+                jasně uvedou, jak problém řešit. Tento e-mail je naopak vágní a
+                snaží se vás donutit kliknout na odkaz.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div id="contenTwo" class="content">
+        <div id="img">
+          <img src="/assets/level2.png" alt="" />
+        </div>
+        <div id="infoLevel">
+          <div id="infoLevelOne">
+            <h1>1. Oficiální doména</h1>
+            <ul>
+              <li>
+                E-mail přichází z domény techsolutions.cz, která odpovídá názvu
+                firmy uvedenému v podpisu. To je důležitý znak, že e-mail
+                pravděpodobně pochází od skutečné osoby ve firmě, což je
+                důležitý faktor pro rozlišení od phishingových e-mailů, které
+                často používají falešné nebo podobné domény.
+              </li>
+            </ul>
+            <h1>2. Specifické informace o schůz</h1>
+            <ul>
+              <li>
+                E-mail obsahuje konkrétní informace o termínu schůze (1. dubna,
+                15:00), což ukazuje, že jde o reálnou firemní událost, na kterou
+                je třeba se připravit. Phishingové e-maily často neuvádějí
+                detailní čas nebo se vyhýbají konkrétním datům, aby se vyhnuly
+                snadné verifikaci.
+              </li>
+            </ul>
+            <h1>3. Personalizovaný podpis</h1>
+            <ul>
+              <li>
+                E-mail je podepsaný konkrétní osobou (Martin Novák, vedoucí
+                oddělení), což přidává na důvěryhodnosti. Phishingové e-maily
+                často nemají konkrétní jméno nebo používají generické podpisy
+                jako "Tým zákaznické podpory".
+              </li>
+            </ul>
+            <h1>4. Žádné podezřelé odkazy</h1>
+            <ul>
+              <li>
+                Phishingové e-maily mohou obsahovat přílohy, které mohou
+                obsahovat malware nebo jiné škodlivé soubory.
+              </li>
+            </ul>
+            <h1>5. Odesílatel je známý a důvěryhodný</h1>
+            <ul>
+              <li>
+                E-mail přichází od osoby s firemní doménou, což ukazuje, že
+                odesílatel je pravděpodobně skutečným zaměstnancem firmy.
+                Phishingové e-maily mají často odesílatele s doménou, která je
+                velmi podobná oficiální, ale jemně pozměněná, aby zmátla
+                příjemce.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div id="contenThree" class="content">
+        <div id="img">
+          <img src="/assets/level3.png" alt="" />
+        </div>
+        <div id="infoLevel">
+          <div id="infoLevelOne">
+            <h1>1. Neznámý odesílatel</h1>
+            <ul>
+              <li>
+                E-mail přichází z adresy podpora@csob.cz.com, která vypadá
+                podobně jako oficiální adresa, ale obsahuje chybu v doméně
+                (správná adresa by byla podpora@csob.cz, ne csob.cz.com). To je
+                běžná technika použitá k oklamání uživatele.
+              </li>
+            </ul>
+            <h1>2. Podezřelé přílohy</h1>
+            <ul>
+              <li>
+                E-mail obsahuje přílohu ve formátu PDF. Phishingové e-maily
+                často obsahují nevyžádané přílohy, které mohou obsahovat
+                malware. Oficiální komunikace většinou přílohy nezasílá nebo
+                uživatele na ně neodkazuje.
+              </li>
+            </ul>
+            <h1>3. Naléhavý tón</h1>
+            <ul>
+              <li>
+                Phishingové e-maily často používají jazyk, který vyvolává
+                naléhavost nebo nutnost okamžité akce. Tento e-mail například
+                doporučuje okamžité přečtení přiloženého dokumentu, což je
+                technika pro přimění uživatele k otevření škodlivého souboru.
+              </li>
+            </ul>
+            <h1>4. Neosobní oslovení</h1>
+            <ul>
+              <li>
+                E-mail začíná oslovením „Vážený kliente“ místo specifického
+                jména příjemce. Legitimní banky obvykle oslovují klienty jménem.
+              </li>
+            </ul>
+            <h1>5. Nepřesné kontaktní údaje</h1>
+            <ul>
+              <li>
+                E-mail uvádí telefonní číslo a e-mailovou adresu, ale adresy a
+                telefonní čísla v phishingových e-mailech bývají falešné nebo
+                odkazují na jiné služby než oficiální kontakty banky. Ověřte
+                kontaktní údaje přímo na oficiální stránce banky.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- !Antivir -->
     <div id="test">
       <h3>Aby se virus odstranil, musíte odpovědět správně na tyto otázky.</h3>
@@ -27,22 +223,28 @@
           >
           <div class="questionContent">
             <div class="answareItemWrapper">
-              <input type="radio" name="name" id="right1" /><label for=""
-                >A: E-mail obsahuje neosobní oslovení.</label
-              >
+              <input
+                type="radio"
+                onclick="CheckIt(1)"
+                name="name"
+                id="right1"
+              /><label for="">A: E-mail obsahuje neosobní oslovení.</label>
             </div>
             <div class="answareItemWrapper">
-              <input type="radio" name="name" /><label for=""
+              <input type="radio" onclick="CheckIt(2)" name="name" /><label
+                for=""
+                id="goodAsnware1Visible"
                 >B: E-mail má správnou gramatiku a je podepsán jménem.</label
               >
             </div>
             <div class="answareItemWrapper">
-              <input type="radio" name="name" /><label for=""
+              <input type="radio" onclick="CheckIt(3)" name="name" /><label
+                for=""
                 >C: Odkaz vede na známou webovou stránku banky.</label
               >
             </div>
           </div>
-          <span class="goodAsnware">Správně:</span>
+          <span class="goodAsnware1"></span>
         </div>
         <hr />
         <div class="questionWrapper">
@@ -51,24 +253,36 @@
           >
           <div class="questionContent">
             <div class="answareItemWrapper">
-              <input type="radio" name="name2" /><label for=""
+              <input
+                type="radio"
+                onclick="CheckIt(4)"
+                name="name2"
+                id="goodAsnware2Visible"
+              /><label for=""
                 >A: URL adresa začíná "https://" a má zámek.</label
               >
             </div>
             <div class="answareItemWrapper">
-              <input type="radio" name="name2" id="right2" /><label for=""
+              <input
+                type="radio"
+                onclick="CheckIt(5)"
+                name="name2"
+                id="right2"
+              /><label for=""
                 >B: URL adresa obsahuje gramatické chyby nebo neobvyklé
                 znaky.</label
               >
             </div>
             <div class="answareItemWrapper">
-              <input type="radio" name="name2" /><label for=""
+              <input type="radio" onclick="CheckIt(6)" name="name2" /><label
+                for=""
+                id="goodAsnware3Visible"
                 >C: URL adresa je stejná jako oficiální webová stránka.</label
               >
             </div>
           </div>
 
-          <span class="goodAsnware">Správně:</span>
+          <span class="goodAsnware2"></span>
         </div>
         <hr />
         <div class="questionWrapper">
@@ -77,26 +291,33 @@
           >
           <div class="questionContent">
             <div class="answareItemWrapper">
-              <input type="radio" name="name3" /><label for=""
+              <input type="radio" onclick="CheckIt(7)" name="name3" /><label
+                for=""
                 >A: Klikněte na všechny odkazy v e-mailech, abyste zjistili, co
                 se děje.</label
               >
             </div>
             <div class="answareItemWrapper">
-              <input type="radio" name="name3" /><label for=""
+              <input type="radio" onclick="CheckIt(8)" name="name3" /><label
+                for=""
                 >B: Požádejte příjemce e-mailu, aby vám znovu poslal
                 odkaz.</label
               >
             </div>
             <div class="answareItemWrapper">
-              <input type="radio" name="name3" id="right3" /><label for=""
+              <input
+                type="radio"
+                onclick="CheckIt(9)"
+                name="name3"
+                id="right3"
+              /><label for=""
                 >C: Nikdy neklikejte na odkazy v podezřelých e-mailech a
                 neotevírejte přílohy.</label
               >
             </div>
           </div>
 
-          <span class="goodAsnware">Správně:</span>
+          <span class="goodAsnware3"></span>
         </div>
         <hr />
         <button id="doneBtn">Hotovo</button>
@@ -188,19 +409,19 @@
         <div id="timeline">
           <h1>Status</h1>
           <div class="levels">
-            <h5 id="levelOne">Level 1</h5>
+            <h5 id="levelOne">E-mail 1</h5>
             <img id="icontrue1" src="/assets/mark.png" alt="" />
             <img id="iconfalse1" src="/assets/canceld.png" alt="" />
           </div>
           <div class="pipe"></div>
           <div class="levels">
-            <h5 id="levelTwo">Level 2</h5>
+            <h5 id="levelTwo">E-mail 2</h5>
             <img id="icontrue2" src="/assets/mark.png" alt="" />
             <img id="iconfalse2" src="/assets/canceld.png" alt="" />
           </div>
           <div class="pipe"></div>
           <div class="levels">
-            <h5 id="levelThree">Level 3</h5>
+            <h5 id="levelThree">E-mail 3</h5>
             <img id="icontrue3" src="/assets/mark.png" alt="" />
             <img id="iconfalse3" src="/assets/canceld.png" alt="" />
           </div>
@@ -234,7 +455,7 @@
 
             <hr />
             <span id="predmet"
-              >Předmět: 🛑 Problém s doručením vaší zásilky č. #CZ747253</span
+              >Předmět:🔴 Problém s doručením vaší zásilky č. #CZ747253</span
             >
             <hr />
             <p id="mesage">
@@ -316,7 +537,7 @@
 
           <div class="content">
             <div id="headerContent">
-              <span id="from">Od: podpora@csob.cz</span>
+              <span id="from">Od: podpora@csob.cz.com</span>
               <button id="reportBtnThree">Nahlásit</button>
             </div>
 
@@ -357,7 +578,7 @@
               Tým ČSOB<br />
               Zákaznická podpora<br />
               tel.: 800 300 300<br />
-              e-mail: podpora@csob.cz<br />
+              e-mail: podpora@csob.cz.com<br />
               www.csob.cz
             </p>
           </div>
@@ -421,7 +642,7 @@
           </div>
           <div class="item | spItem" id="emailOne">
             <input type="checkbox" /><label for="" class="name"
-              >🛑 Problém s doručením vaší zásilky č. #CZ747253</label
+              >🔴 Problém s doručením vaší zásilky č. #CZ747253</label
             >
             <p class="content">
               Vážený zákazníku, během přepravy vaší zásilky č. #CZ747253 došlo k
