--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu</title>
+    <title>Cyber | Jak na phishingové e-maily</title>
     <link rel="stylesheet" href="menu.css" />
+    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -63,8 +64,7 @@
   </body>
 </html>
 
-<!-- TODO 1. Doděla test (Správné/špatné odpovědi) Dodělat Špatný konec a Dodělat durhý dobrý konec
-   todo:2. Dodělat END window. Vypsat chyby a money.
+<!-- TODO 1. Doděla test (Správné/špatné odpovědi) 
    todo: 3. Zablokovat kliknutí na prošlé levleli. 
    todo: 4. Zprovoznit zavíraní některých oken. 
    todo: 5. Vylepšit otvírání a zavíránoi useraData window-->
